--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 					
 					<div class="row">						
 						<div class="col-md-12 col-sm-12">
-							<form class="form" name="enq" method="post" action="contact.php" onsubmit="return validation();">
+							<form class="form" name="enq" method="post" action="contact.php">
 								<div class="row">
 									<div class="form-group col-md-4">
 										<input type="text" name="name" class="form-control" placeholder="Name" required="required">
@@ -465,7 +465,7 @@
 										<button type="submit" value="Send message" name="submit" id="submitButton" class="btn btn-default main_btn" title="Submit Your Message!">Send Message</button>
 									</div>
 								</div>
-							</form>
+							</form>							
 						</div>						
 					</div>
 				</div>
